--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@
     <div class="header">
         <h1>📚 Library Management System</h1>
         <p>CISC 327 - Software Quality Assurance Project</p>
-        <p>Your Name</p>
+        <p>Moustafa Salem</p>
     </div>
     
     <div class="nav">
